--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Project exclude paths
 /.idea/
 /venv/
-/QuestionTime/front-end/node_modules/.cache/
+/QuestionTime/front-end/node_modules/
 /QuestionTime/password.py
 
 # Log files
