--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -10,6 +10,7 @@ django-allauth==0.45.0
 django-crispy-forms==1.12.0
 django-registration==3.2
 django-rest-auth==0.9.5
+django-webpack-loader==1.1.0
 djangorestframework==3.12.4
 idna==3.2
 oauthlib==3.1.1
